# enigma_m4

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  project.toml  pyproject.toml
.github/workflows/: tests.yml
enigma/: CHANGELOG.md  README.md  __init__.py  pyproject.toml
enigma/.github/workflows/: tests.yml
enigma/cli/: __init__.py
enigma/core/: __init__.py  machine.py  plugboard.py  reflector.py  rotor.py
enigma/data/: __init__.py  reflectors.py
enigma/gui/: __init__.py
enigma/src/enigma/: __init__.py  machine.py  plugboard.py  reflector.py  rotor.py  rotors.py
enigma/src/enigma.egg-info/: PKG-INFO  SOURCES.txt
enigma/tests/: test_machine.py  test_plugboard.py  test_reflector.py  test_rotor.py
src/enigma/: __init__.py  reflector.py  rotor.py  rotors.py
tests/: test_integration.py  test_integration_m4.py  test_intergation_m4_historical.py  test_machine.py  test_plugboard.py  test_reflector.py  test_reflectors.py  test_rotor.py  test_rotors.py
